@@ -9,7 +9,7 @@
   <property name="src" location="src/base"/>
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
-  <property name="version" value="0.16"/>
+  <property name="version" value="0.17"/>
 
   <import file="${home}/base.xml"/>
 
