@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" UpgradeCode="{809FD072-8BEC-488F-BFB0-DB05C98E17BA}" Version="0.16" Language="1033" Name="jfCraft" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{809FD072-8BEC-488F-BFB0-DB05C98E17BA}" Version="0.17" Language="1033" Name="jfCraft" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" Platform="x64"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
